ocp4/my-route-tls.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cisroute
  namespace: default
  annotations:
    virtual-server.f5.com/clientssl: /Common/cisroutes-clientssl
spec:
  host: my-frontend.cisroutes.dc1.example.com
  path: /
  to:
    kind: Service
    name: my-frontend
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
